--- a/productInventory(Iphone).html
+++ b/productInventory(Iphone).html
@@ -34,7 +34,7 @@
 
     <!-- HEADER SECTION-->
 
-    <header class="w-full flex justify-between items-center sticky top-0">
+    <header class="w-full flex justify-between items-center sticky top-0 bg-gray-100">
 
         <div class="p-4">
             <h1 class="font-bold font-Lacquer text-xl">getdphone</h1>
@@ -103,7 +103,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                     </svg>
                 </a>
 
@@ -113,7 +113,132 @@
 
     </section>
 
+    <div class="flex justify-end font-Gorditas font-medium mr-4">Sort By: Featured
+        <span class="px-2">&#8744;</span>
+    </div>
+
     <!-- SEARCH SECTION ENDS -->
+
+    <main>
+
+        <!-- Product Inventory(Samsung) -->
+
+        <section class="flex">
+
+            <!-- Inventory 1 -->
+
+            <div class="bg-white w-1/3 font-Gorditas p-2 h-full mr-6">
+
+                <div class="flex p-2 justify-between">
+                    <p>Price</p>
+                    <div> + </div>
+                </div>
+
+                <div class="flex p-2 justify-between">
+                    <p>Series Name</p>
+                    <div> + </div>
+                </div>
+
+                <div class="flex p-2 justify-between">
+                    <p>Storage Size</p>
+                    <div> + </div>
+                </div>
+
+                <div class="flex p-2 justify-between">
+                    <p>Color</p>
+                    <div> + </div>
+                </div>
+
+                <div class="flex p-2 justify-between">
+                    <p>Category of Usage</p>
+                    <div> + </div>
+
+                </div>
+
+            </div>
+
+            <!-- Inventory 1 ends -->
+
+            <!-- Inventory 2 -->
+
+            <div class="bg-white w-full">
+
+                <div class="flex justify-between">
+                    <h2 class="text-center"><a href="">IPHONE</a></h2>
+                    <h2 class="text-center"> <a href="">SAMSUNG</a></h2>
+                    <h2 class="text-center"> <a href="">HUAWEI</a></h2>
+                </div>
+
+                <div class="flex flex-col md:flex-row mt-8 justify-between items-center">
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+                </div>
+
+                <div class="flex flex-col md:flex-row mt-8 justify-between items-center">
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+                </div>
+
+                <div class="flex flex-col md:flex-row mt-8 justify-between items-center">
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+                </div>
+
+                <div class="flex flex-col md:flex-row mt-8 justify-between items-center">
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                    <div class="">
+                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- Inventory 2 ends -->
+
+        </section>
+
+        <!-- Product Inventory(Samsung) ends -->
+
+    </main>
 
 </body>
 
