--- a/productInventory(Iphone).html
+++ b/productInventory(Iphone).html
@@ -129,7 +129,7 @@
 
             <!-- Inventory 1 -->
 
-            <div class="bg-white w-1/3 font-Gorditas p-2 h-full mr-6 hidden sm:block">
+            <div class="bg-white w-1/3 font-Gorditas p-2 h-full mr-6 hidden sm:block sticky top-1">
 
                 <div class="flex p-2 justify-between">
                     <p>Price</p>
@@ -165,7 +165,7 @@
 
             <section class="w-full sm:mr-4">
 
-                <div class="mb-4">
+                <div class="mb-4 sticky top-1">
 
                     <div class="flex justify-between bg-white p-6 font-bold font-Gorditas lg:text-2xl">
                         <h1 class="border-b-4 border-red-500"><a href="">IPHONE</a></h1>
@@ -421,6 +421,119 @@
         </section>
 
         <!-- Product Inventory(Samsung) ends -->
+
+        <!-- Footer -->
+
+        <footer class="bg-gray-900 text-gray-100">
+
+            <div class="flex flex-col lg:flex-row justify-between mt-40 px-12 py-8">
+
+                <div class="">
+                    <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
+                </div>
+
+                <div class="">
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Quick Links</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Sign Up</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">About Us</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Shop</li>
+                        </a>
+                        <a href="">
+                            <li>Contact Us</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Others</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">User FAQs</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Contact Us</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Legal</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Privacy Policy</li>
+                        </a>
+                        <a href="">
+                            <li class="">Terms and Conditions</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Products</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">iPhone</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Samsung</li>
+                        </a>
+                        <a href="">
+                            <li>Huawei</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
+
+                    <div class="mt-4">
+                        <input type="text" class="rounded p-2" placeholder="Email Address">
+                        <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="flex justify-between items-center flex-col lg:flex-row px-20 py-4">
+
+                <div class="mb-4 lg:mb-0">
+                    Copyright <span class="copyright">&copy</span> 2021. All rights Reserved.
+                </div>
+
+                <div class="flex">
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                </div>
+
+            </div>
+
+        </footer>
+        <!-- footer end -->
 
     </main>
 
