--- a/products(Iphone).html
+++ b/products(Iphone).html
@@ -137,9 +137,9 @@
 
             </div>
 
-            <div class="font-Gorditas mt-6 mr-12">
+            <div class="font-Gorditas mt-6 lg:mr-12">
 
-                <h1 class="text-3xl font-bold">iPHONE 11 PRO MAX</h1>
+                <h1 class="text-3xl lg:font-bold">iPHONE 11 PRO MAX</h1>
 
                 <p class="mt-10 font-medium mb-1">Choose your capacity</p>
 
@@ -187,5 +187,205 @@
         </section>
 
         <!-- Products (iPhone) section ends -->
+
+        <!-- Recommended Accessories section -->
+
+        <section>
+
+            <div class="font-Gorditas mt-10">
+
+                <h1 class="text-xl font-bold mb-2 ml-2">Recommended Accessories</h1>
+
+                <div class="flex flex-col md:flex-row justify-center items-center">
+
+                    <div class="font-bold">
+
+                        <img src="../GetDPhone/img/R_Accessories/iphone/Silicone case with magsafe.png" alt="">
+
+                        <h2 class="text-center mt-4">Silicone Case with MagSafe</h2>
+
+                        <p class="text-center">N19,000</p>
+
+                    </div>
+
+                    <div class="font-bold">
+
+                        <img src="../GetDPhone/img/R_Accessories/iphone/Airpods Pro.png" alt="">
+
+                        <h2 class="text-center">Airpods Pro</h2>
+
+                        <p class="text-center">N100,000</p>
+
+                    </div>
+
+                    <div class="font-bold">
+
+                        <img src="../GetDPhone/img/R_Accessories/iphone/Magsafe Duo charger.png" alt="">
+
+                        <h2 class="text-center">MagSafe Duo Charger</h2>
+
+                        <p class="text-center">N60,000</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- Recommended Accessories section ends -->
+
+        <!-- Customer review section -->
+
+        <section class="bg-gray-100">
+
+            <div class="mx-4 my-10 pt-4">
+                <h1 class="font-bold text-xl">Customer Reviews</h1>
+            </div>
+
+            <div class="flex items-center">
+
+                <div>
+                    <span class="text-8xl font-light ml-4">&#139;</span>
+                </div>
+
+                <div>
+                    <div class="mx-5 px-2.5 md:mx-10 mb-3 md:px-5 lg:mx-20 lg:mb-6 lg:px-10 flex items-center flex-col">
+                        <p class="md:text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+                            hic tempore similique quos, in itaque laboriosam incidunt officiis maxime? Sunt perferendis
+                            maxime architecto facilis. Dolore eius ipsam tempora doloribus dicta!
+                        </p>
+
+                    </div>
+
+                    <div>
+                        <p class="font-bold text-center mb-4">Lebron James</p>
+                    </div>
+
+                </div>
+
+                <div class="text-8xl font-light mr-4">
+                    <span>&#155;</span>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- Customer review section ends -->
+
+        <!-- Footer -->
+
+        <footer class="bg-gray-900 text-gray-100">
+
+            <div class="flex flex-col lg:flex-row justify-between mt-40 px-12 py-8">
+
+                <div class="">
+                    <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
+                </div>
+
+                <div class="">
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Quick Links</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Sign Up</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">About Us</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Shop</li>
+                        </a>
+                        <a href="">
+                            <li>Contact Us</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Others</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">User FAQs</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Contact Us</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Legal</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Privacy Policy</li>
+                        </a>
+                        <a href="">
+                            <li class="">Terms and Conditions</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Products</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">iPhone</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Samsung</li>
+                        </a>
+                        <a href="">
+                            <li>Huawei</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
+
+                    <div class="mt-4">
+                        <input type="text" class="rounded p-2" placeholder="Email Address">
+                        <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="flex justify-between items-center flex-col lg:flex-row px-20 py-4">
+
+                <div class="mb-4 lg:mb-0">
+                    Copyright <span class="copyright">&copy</span> 2021. All rights Reserved.
+                </div>
+
+                <div class="flex">
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                </div>
+
+            </div>
+
+        </footer>
+        <!-- footer end -->
 
     </main>
