--- a/cart(Iphone).html
+++ b/cart(Iphone).html
@@ -22,7 +22,7 @@
             }
         }
     </script>
-    <title>Samsung cart</title>
+    <title>Iphone cart</title>
 </head>
 
 <body class="font-Gorditas">
@@ -81,9 +81,9 @@
 
     <!-- HEADER END -->
 
-    <section class="mx-8">
+    <section class=" mx-4 sm:mx-8">
 
-        <h1 class="border-b border-black mt-40 font-medium text-3xl">YOUR CART</h1>
+        <h1 class="border-b border-black mt-20 lg:mt-40 font-medium text-3xl">YOUR CART</h1>
 
         <div class="flex justify-between border-b border-black font-bold py-2">
 
@@ -93,24 +93,154 @@
 
         </div>
 
-        <div class="flex justify-between items-center">
+        <div class="flex justify-between items-center pt-10 lg:pt-20 border-b border-black pb-10 lg:pb-20">
 
-            <div class="flex items-center">
+            <div class="flex flex-col lg:flex-row items-center">
 
-                <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="">
-                <p>iPHONE 11 PRO MAX</p>
+                <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="sm:mr-20 md:mr-0">
+                <p class="text-sm mt-2 lg:mt-0">iPHONE 11 PRO MAX</p>
+
             </div>
 
-            <select name="quantity" id="quantity" class="border border-black border-2 px-6 ">
+            <select name="quantity" id="quantity" class="border border-black border-2 px-4 lg:px-6 flex lg:mr-80 mr-4 sm:mr-40">
                 <option value="one">1</option>
                 <option value="two">2</option>
                 <option value="three">3</option>
             </select>
 
             <p class="font-bold">N500,000</p>
+
+        </div>
+
+        <div class="flex justify-end border-b border-black font-bold py-2">
+
+            <p class="mr-14">Subtotal</p>
+            <p>N500,000</p>
+
+        </div>
+
+        <div class="flex justify-end">
+
+            <button class="rounded bg-black text-white px-20 py-2 mt-6">Checkout</button>
             
         </div>
+
     </section>
+
+     <!-- Footer -->
+
+     <footer class="bg-gray-900 text-gray-100">
+
+        <div class="flex flex-col lg:flex-row justify-between mt-40 px-12 py-8">
+
+            <div class="">
+                <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
+            </div>
+
+            <div class="">
+
+                <h2 class="underline decoration-2 underline-offset-8 text-lg">Quick Links</h2>
+
+                <ul class="mt-3 mb-10 text-lg">
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Sign Up</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">About Us</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Shop</li>
+                    </a>
+                    <a href="">
+                        <li>Contact Us</li>
+                    </a>
+                </ul>
+
+            </div>
+
+            <div>
+
+                <h2 class="underline decoration-2 underline-offset-8 text-lg">Others</h2>
+
+                <ul class="mt-3 mb-10 text-lg">
+                    <a href="">
+                        <li class="mb-0 md:mb-2">User FAQs</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Contact Us</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Legal</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Privacy Policy</li>
+                    </a>
+                    <a href="">
+                        <li class="">Terms and Conditions</li>
+                    </a>
+                </ul>
+
+            </div>
+
+            <div>
+
+                <h2 class="underline decoration-2 underline-offset-8 text-lg">Products</h2>
+
+                <ul class="mt-3 mb-10 text-lg">
+                    <a href="">
+                        <li class="mb-0 md:mb-2">iPhone</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Samsung</li>
+                    </a>
+                    <a href="">
+                        <li>Huawei</li>
+                    </a>
+                </ul>
+
+            </div>
+
+            <div>
+
+                <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
+
+                <div class="mt-4">
+                    <input type="text" class="rounded p-2" placeholder="Email Address">
+                    <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
+                </div>
+
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="flex justify-between items-center flex-col lg:flex-row px-20 py-4">
+
+            <div class="mb-4 lg:mb-0">
+                Copyright <span class="copyright">&copy</span> 2021. All rights Reserved.
+            </div>
+
+            <div class="flex">
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+            </div>
+
+        </div>
+
+    </footer>
+    <!-- footer end -->
+
+   
 
 </body>
 
