--- a/cart(Samsung).html
+++ b/cart(Samsung).html
@@ -81,7 +81,7 @@
 
     <!-- HEADER END -->
 
-    <section class=" mx-4 sm:mx-8">
+    <section class="mx-4 sm:mx-8">
 
         <h1 class="border-b border-black mt-20 lg:mt-40 font-medium text-3xl">YOUR CART</h1>
 
@@ -97,8 +97,8 @@
 
             <div class="flex flex-col lg:flex-row items-center">
 
-                <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="sm:mr-20 md:mr-0">
-                <p class="text-sm mt-2 lg:mt-0">iPHONE 11 PRO MAX</p>
+                <img src="../GetDPhone/img/Samsung/Samsung S20.png" alt="" class="sm:mr-20 md:mr-0">
+                <p class="text-sm mt-2 lg:mt-0">Samsung S20</p>
 
             </div>
 
@@ -108,14 +108,14 @@
                 <option value="three">3</option>
             </select>
 
-            <p class="font-bold">N500,000</p>
+            <p class="font-bold">N170,000</p>
 
         </div>
 
         <div class="flex justify-end border-b border-black font-bold py-2">
 
             <p class="mr-14">Subtotal</p>
-            <p>N500,000</p>
+            <p>N170,000</p>
 
         </div>
 
