--- a/checkout(confirmation).html
+++ b/checkout(confirmation).html
@@ -79,10 +79,12 @@
 
     <footer class="bg-gray-900 text-gray-100">
 
-        <div class="flex flex-col lg:flex-row justify-between mt-60 px-12 py-8">
+        <div class="flex flex-col lg:flex-row justify-between mt-20 px-12 py-8">
 
             <div class="">
+
                 <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
+
             </div>
 
             <div class="">
@@ -90,18 +92,23 @@
                 <h2 class="underline decoration-2 underline-offset-8 text-lg">Quick Links</h2>
 
                 <ul class="mt-3 mb-10 text-lg">
-                    <a href="">
+
+                    <a href="signup.html">
                         <li class="mb-0 md:mb-2">Sign Up</li>
                     </a>
-                    <a href="">
+
+                    <a href="about.html">
                         <li class="mb-0 md:mb-2">About Us</li>
                     </a>
-                    <a href="">
+
+                    <a href="productInventory(Iphone).html">
                         <li class="mb-0 md:mb-2">Shop</li>
                     </a>
-                    <a href="">
+
+                    <a href="contactUs.html">
                         <li>Contact Us</li>
                     </a>
+
                 </ul>
 
             </div>
@@ -111,21 +118,21 @@
                 <h2 class="underline decoration-2 underline-offset-8 text-lg">Others</h2>
 
                 <ul class="mt-3 mb-10 text-lg">
-                    <a href="">
-                        <li class="mb-0 md:mb-2">User FAQs</li>
-                    </a>
-                    <a href="">
-                        <li class="mb-0 md:mb-2">Contact Us</li>
-                    </a>
-                    <a href="">
-                        <li class="mb-0 md:mb-2">Legal</li>
-                    </a>
-                    <a href="">
-                        <li class="mb-0 md:mb-2">Privacy Policy</li>
-                    </a>
-                    <a href="">
-                        <li class="">Terms and Conditions</li>
-                    </a>
+
+                    <li class="mb-0 md:mb-2">User FAQs</li>
+
+
+                    <li class="mb-0 md:mb-2">Contact Us</li>
+
+
+                    <li class="mb-0 md:mb-2">Legal</li>
+
+
+                    <li class="mb-0 md:mb-2">Privacy Policy</li>
+
+
+                    <li class="">Terms and Conditions</li>
+
                 </ul>
 
             </div>
@@ -135,26 +142,31 @@
                 <h2 class="underline decoration-2 underline-offset-8 text-lg">Products</h2>
 
                 <ul class="mt-3 mb-10 text-lg">
-                    <a href="">
+
+                    <a href="productInventory(Iphone).html">
                         <li class="mb-0 md:mb-2">iPhone</li>
                     </a>
-                    <a href="">
+
+                    <a href="productInventory(Samsung).html">
                         <li class="mb-0 md:mb-2">Samsung</li>
                     </a>
-                    <a href="">
+
+                    <a href="productInventory(Huawei).html">
                         <li>Huawei</li>
                     </a>
+
                 </ul>
 
             </div>
 
             <div>
-
                 <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
 
                 <div class="mt-4">
                     <input type="text" class="rounded p-2 text-black" placeholder="Email Address">
+
                     <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
+
                 </div>
 
             </div>
@@ -166,7 +178,7 @@
         <div class="flex justify-between items-center flex-col lg:flex-row px-20 py-4">
 
             <div class="mb-4 lg:mb-0">
-                Copyright <span class="copyright">&copy</span> 2021. All rights Reserved.
+                Copyright <span class="copyright">&copy</span> 2022. All rights Reserved.
             </div>
 
             <div class="flex">
@@ -182,7 +194,6 @@
                 <a href="">
                     <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
-
         </div>
 
     </footer>
